1. Improve recommendation system and add docs for it. 2. Fix issue where switching the singing mode on would enable absolute cinema. 3. Fix issue in absolute cinema where there would be multiple songs visually if it gets activated multiple times, but only one moveable song. (There should've been only one.) 4. Center absolute cinema. 5. Fix issue when cloning playlist with 100+ songs. 6. Fix issue where recommendation algorithim would not use the correct tiers if you moved them around with edit tier. 7. Fix "Add New Tier" UI not showing up once pressed (I deleted it before). 8. Add more distinct CSS for "Add to Tierlist"/"Add All to Tierlist". 9. Add background color to page. (This is for Firefox, it worked on Chromium based browsers.) 10. Add known issues file.

--- a/src/components/CinemaPoseDetector.css
+++ b/src/components/CinemaPoseDetector.css
@@ -41,9 +41,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  object-fit: fill;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.5s ease-in;
