--- a/src/components/RecommendationGenerator.css
+++ b/src/components/RecommendationGenerator.css
@@ -269,7 +269,7 @@
 }
 
 .add-to-tierlist-button.added {
-  background-color: #43A047;
+  background-color: #4855B9;
   cursor: default;
 }
 
@@ -303,7 +303,7 @@
 }
 
 .add-all-to-tierlist-button.added {
-  background-color: #43A047;
+  background-color: #4855B9;
   cursor: default;
 }
 
