--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
+  background-color: #121212;
 }
 
 * {
